--- a/templates/single.html
+++ b/templates/single.html
@@ -1,47 +1,45 @@
 <!-- wp:template-part {"slug":"header"} /-->
 
 <!-- wp:group {"layout":{"type":"constrained"}} -->
-<div class="wp-block-group"><!-- wp:group {"layout":{"type":"constrained"},"align":"wide"} -->
-  <div class="wp-block-group alignwide"><!-- wp:post-featured-image {"align":"wide"} /-->
+<div class="wp-block-group"><!-- wp:group {"align":"wide","layout":{"type":"constrained"}} -->
+<div class="wp-block-group alignwide"><!-- wp:post-featured-image {"align":"wide"} /-->
 
-    <!-- wp:post-title {"align":"wide"} /--></div>
-  <!-- /wp:group -->
+<!-- wp:post-title {"align":"wide"} /--></div>
+<!-- /wp:group -->
 
-  <!-- wp:spacer {"height":"30px"} -->
-  <div style="height:30px" aria-hidden="true" class="wp-block-spacer"></div>
-  <!-- /wp:spacer -->
+<!-- wp:spacer {"height":"30px"} -->
+<div style="height:30px" aria-hidden="true" class="wp-block-spacer"></div>
+<!-- /wp:spacer -->
 
-  <!-- wp:post-content /-->
+<!-- wp:post-content /-->
 
-  <!-- wp:spacer {"height":"30px"} -->
-  <div style="height:30px" aria-hidden="true" class="wp-block-spacer"></div>
-  <!-- /wp:spacer -->
+<!-- wp:spacer {"height":"30px"} -->
+<div style="height:30px" aria-hidden="true" class="wp-block-spacer"></div>
+<!-- /wp:spacer -->
 
-  <!-- wp:group {"layout":{"type":"constrained"}} -->
-  <div class="wp-block-group"><!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","verticalAlignment":"center"}} -->
-    <div class="wp-block-group"><!-- wp:post-date /-->
+<!-- wp:group {"layout":{"type":"constrained"}} -->
+<div class="wp-block-group"><!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","verticalAlignment":"center"}} -->
+<div class="wp-block-group"><!-- wp:post-date /-->
 
-      <!-- wp:post-author /-->
+<!-- wp:post-author /-->
 
-      <!-- wp:post-terms {"term":"category"} /-->
+<!-- wp:post-terms {"term":"category"} /-->
 
-      <!-- wp:post-terms {"term":"post_tag"} /--></div>
-    <!-- /wp:group -->
+<!-- wp:post-terms {"term":"post_tag"} /--></div>
+<!-- /wp:group -->
 
-    <!-- wp:spacer {"height":"30px"} -->
-    <div style="height:30px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
+<!-- wp:spacer {"height":"30px"} -->
+<div style="height:30px" aria-hidden="true" class="wp-block-spacer"></div>
+<!-- /wp:spacer -->
 
-    <!-- wp:separator -->
-    <hr class="wp-block-separator has-alpha-channel-opacity"/>
-    <!-- /wp:separator -->
+<!-- wp:separator -->
+<hr class="wp-block-separator has-alpha-channel-opacity"/>
+<!-- /wp:separator --></div>
+<!-- /wp:group -->
 
-  <!-- /wp:group --></div>
-
-  <!-- wp:group {"layout":{"type":"constrained","contentSize":"650px"}} -->
-  <div class="wp-block-group"><!-- wp:template-part {"slug":"post-comments"} /--></div>
-  <!-- /wp:group -->
-
+<!-- wp:group {"layout":{"type":"constrained","contentSize":"650px"}} -->
+<div class="wp-block-group"></div>
+<!-- /wp:group --></div>
 <!-- /wp:group -->
 
 <!-- wp:template-part {"slug":"footer"} /-->
